--- a/ToolCRM/appsettings.Development.json
+++ b/ToolCRM/appsettings.Development.json
@@ -4,5 +4,29 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "FilePaths": {
+      "SourceFile": "SourceFile",
+      "UploadWorkingTime": "UploadFile/workingTime",
+      "UploadCallReport": "UploadFile/CallReport",
+      "Logs": "Logs"
+    },
+    "Sftp": {
+      "Host": "smartbank-sftp.mafc.vn",
+      "Port": 6336,
+      "Username": "smartbank",
+      "Password": "$m@rT3anK2024",
+      "WorkingTimeFolder": "/uploads/WORKINGTIME/",
+      "CallReportFolder": "/uploads/CAllREPORT/"
+    },
+    "Email": {
+      "SmtpHost": "mail9054.maychuemail.com",
+      "SmtpPort": 465,
+      "Username": "noreply@vietstargroup.vn",
+      "Password": "AERu5e256T",
+      "Recipient": "admin@smartbank.com.vn"
+    }
   }
 }
