--- a/ToolCRM/appsettings.json
+++ b/ToolCRM/appsettings.json
@@ -19,7 +19,8 @@
       "Username": "smartbank",
       "Password": "$m@rT3anK2024",
       "WorkingTimeFolder": "/uploads/WORKINGTIME/",
-      "CallReportFolder": "/uploads/CAllREPORT/"
+      "CallReportFolder": "/uploads/CAllREPORT/",
+      "PaymentFolder": "/uploads/PAYMENT"
     },
     "Email": {
       "SmtpHost": "mail9054.maychuemail.com",
